# Pagoda

./: .gitignore  CI.md  CLAUDE.md  Cargo.toml  Makefile  deny.toml  rust-toolchain.toml  rustfmt.toml  standard.md  分布式推理框架总体模块图.drawio
lib/config/: Cargo.toml
lib/config/src/: lib.rs
lib/mocker/: Cargo.toml  README.md
lib/mocker/src/: engine.rs  lib.rs
lib/mocker/src/common/: bootstrap.rs  kv_cache_trace.rs  mod.rs  perf_model.rs  protocols.rs  running_mean.rs  sequence.rs  utils.rs
lib/mocker/src/kv_cache/: events.rs  lmcache_adapter.rs  local_vllm_cache.rs  mod.rs  tests.rs
lib/mocker/src/kv_manager/: mod.rs
lib/mocker/src/loadgen/: driver.rs  mod.rs  tests.rs  trace.rs  types.rs
lib/mocker/src/replay/: artifacts.rs  collector.rs  entrypoints.rs  loader.rs  mod.rs  planner_handle.rs  router_shared.rs  validate.rs
lib/mocker/src/replay/offline/: README.md  agg.rs  core.rs  disagg.rs  entrypoints.rs  events.rs  mod.rs  progress.rs  runtime_utils.rs  single.rs  state.rs
lib/mocker/src/replay/online/: demux.rs  entrypoints.rs  live_runtime.rs  mod.rs  router.rs  state.rs  task.rs  tests.rs
lib/mocker/src/scheduler/: kv_event_sink.rs  mod.rs  test_utils.rs
lib/mocker/src/scheduler/vllm/: core.rs  live.rs  mod.rs  tests.rs
lib/parsers/: Cargo.toml  PARSER_CASES.md  PIPELINE_CASES.md  REASONING_CASES.md
lib/parsers/src/: lib.rs
lib/parsers/src/reasoning/: base_parser.rs  gemma4_parser.rs  gpt_oss_parser.rs  granite_parser.rs  minimax_append_think_parser.rs  mod.rs
lib/parsers/src/tool_calling/: config.rs  mod.rs  parsers.rs  response.rs  tests.rs  tools.rs
lib/parsers/src/tool_calling/dsml/: mod.rs  parser.rs
lib/parsers/src/tool_calling/gemma4/: mod.rs  parser.rs
lib/parsers/src/tool_calling/harmony/: harmony_parser.rs  mod.rs
lib/parsers/src/tool_calling/json/: base_json_parser.rs  deepseek_v3_1_parser.rs  deepseek_v3_parser.rs  mod.rs
lib/parsers/src/tool_calling/pythonic/: mod.rs  pythonic_parser.rs
lib/parsers/src/tool_calling/xml/: glm47_parser.rs  kimi_k2_parser.rs  mod.rs  parser.rs
lib/protocols/: CLAUDE.md  Cargo.toml
lib/protocols/src/: error.rs  lib.rs
lib/protocols/src/types/: anthropic.rs  chat.rs  completion.rs  impls.rs  mod.rs
lib/protocols/src/types/responses/: mod.rs
lib/protocols/tests/: completion.rs  embeddings.rs  ser_de.rs
lib/runtime/: CONSTRAINTS.md  Cargo.toml  MODULE_MAP.md  README.md  component.rs  distributed.rs  error.rs  logging.rs  metrics.rs  prelude.rs  protocols.rs  runnable.rs  slug.rs  transports.rs  utils.rs
lib/runtime/component/: client.rs  component.rs  endpoint.rs  namespace.rs  service.rs
lib/runtime/compute/: mod.rs
lib/runtime/config/: environment_names.rs
lib/runtime/discovery/: kv_store.rs  utils.rs
lib/runtime/discovery/kube/: daemon.rs
lib/runtime/metrics/: frontend_perf.rs  tokio_perf.rs  transport_metrics.rs
lib/runtime/protocols/: annotated.rs
lib/runtime/src/: config.rs  distributed.rs  engine.rs  engine_routes.rs  error.rs  health_check.rs  instances.rs  lib.rs  local_endpoint_registry.rs  local_portname_registry.rs  logging.rs  metadata_registry.rs  metrics.rs  nvtx.rs  pipeline.rs  prelude.rs  protocols.rs  runnable.rs  runtime.rs  service.rs  servicegroup.rs  slug.rs  storage.rs  system_health.rs  system_status_server.rs  timeline.rs  traits.rs  transports.rs  utils.rs  worker.rs
lib/runtime/src/component/: client.rs  registry.rs
lib/runtime/src/compute/: macros.rs  metrics.rs  mod.rs  pool.rs  thread_local.rs  validation.rs
lib/runtime/src/config/: environment_names.rs
lib/runtime/src/discovery/: kube.rs  kv_store.rs  metadata.rs  mock.rs  mod.rs  utils.rs
lib/runtime/src/discovery/kube/: daemon.rs  objects.rs  service_registry.rs  utils.rs
lib/runtime/src/metrics/: frontend_perf.rs  prometheus_names.rs  request_plane.rs  tokio_perf.rs  transport_metrics.rs  work_handler_perf.rs  work_handler_pool.rs
lib/runtime/src/pipeline/: context.rs  error.rs  network.rs  nodes.rs  registry.rs
lib/runtime/src/pipeline/network/: codec.rs  egress.rs  ingress.rs  manager.rs  tcp.rs
lib/runtime/src/pipeline/nodes/: sinks.rs  sources.rs
lib/runtime/src/protocols/: annotated.rs  maybe_error.rs
lib/runtime/src/servicegroup/: client.rs  namespace.rs  portname.rs  registry.rs  service.rs  servicegroup.rs  servicegroup_impl.rs
lib/runtime/src/storage/: kv.rs
lib/runtime/src/storage/kv/: etcd.rs  file.rs  mem.rs  nats.rs
lib/runtime/src/timeline/: guard.rs  mod.rs
lib/runtime/src/timeline/backends/: ascend.rs  mod.rs  noop.rs  nvtx.rs
lib/runtime/src/transports/: etcd.rs  nats.rs  tcp.rs  utils.rs  zmq.rs
lib/runtime/src/transports/etcd/: connector.rs  kv.rs  lease.rs  lock.rs
lib/runtime/src/utils/: graceful_shutdown.rs  ip_resolver.rs  pool.rs  stream.rs  task.rs  tasks.rs  typed_prefix_watcher.rs
lib/runtime/src/utils/tasks/: critical.rs  (+2 more)
lib/runtime/storage/: kv.rs
lib/runtime/storage/kv/: mem.rs  nats.rs
lib/runtime/tests/: INTEGRATION_SOAK_HANG_REPORT.md  KUBE_DISCOVERY_TEST_MIGRATION.md  TEST_CATALOG.md  component_routing.rs  compute.rs  discovery.rs  event_plane.rs  health_metrics.rs  integration_component_routing.rs  integration_compute.rs  integration_config_env.rs  integration_discovery.rs  integration_event_plane.rs  integration_failures.rs  integration_health_metrics.rs  integration_pipeline.rs  integration_request_plane.rs  integration_runtime_lifecycle.rs  integration_soak.rs  integration_storage.rs  integration_system_status.rs  lifecycle.rs  pipeline.rs  pool.rs  run_tests.sh  runtime_lifecycle.rs  soak.rs  system_status.rs
lib/runtime/tests/common/: contract.rs  contract_engines.rs  engines.rs  mock.rs  mod.rs
lib/runtime/transports/: tcp.rs  zmq.rs
lib/runtime/transports/etcd/: kv.rs  lease.rs  lock.rs
lib/runtime/transports/event_plane/: frame.rs
lib/runtime/utils/: graceful_shutdown.rs  pool.rs  task.rs
lib/runtime/utils/tasks/: critical.rs
lib/tokenizers/: Cargo.toml
lib/tokenizers/src/: fastokens.rs  hf.rs  lib.rs  tiktoken.rs
lib/tokens/: Cargo.toml
lib/tokens/src/: blocks.rs  lib.rs  radix.rs
(+165 files in other folders)
