# SPDX-FileCopyrightText: Copyright (c) 2026-2028 PAGODA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "lib/config",
    "lib/protocols",
    "lib/runtime",
    "lib/tokens",
    "lib/tokenizers",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
description = "Pagoda distributed inference framework"
authors = ["Pagoda Contributors"]
license = "Apache-2.0"
keywords = ["pagoda", "llm", "inference", "distributed"]
homepage = "https://pagoda.local"
repository = "https://pagoda.local/repo"

[workspace.dependencies]
# Local crates
pagoda-config = { path = "lib/config", version = "0.0.1" }
pagoda-protocols = { path = "lib/protocols", version = "0.0.1" }
pagoda-runtime = { path = "lib/runtime", version = "0.0.1" }
pagoda-tokens = { path = "lib/tokens", version = "0.0.1" }
pagoda-tokenizers = { path = "lib/tokenizers", version = "0.0.1" }

# Error handling and utilities
anyhow = { version = "1" }
blake3 = { version = "1" }
bytes = { version = "1" }
dashmap = { version = "6.1" }
derive_builder = { version = "0.20" }
derive-getters = { version = "0.5" }
either = { version = "1.13", features = ["serde"] }
humantime = { version = "2.2.0" }
indexmap = { version = "2" }
ipnet = { version = "2" }
libc = { version = "0.2" }
lru = { version = "0.12" }
moka = { version = "0.12", features = ["future"] }
oneshot = { version = "0.1.13", features = ["std", "async"] }
ordered-float = "4"
parking_lot = "0.12.5"
rand = { version = "0.9.2" }
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
thiserror = { version = "2.0.17" }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }

# Async runtime and messaging
async-nats = { version = "0.45.0", features = ["service"] }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
etcd-client = { version = "0.17.0", features = ["tls"] }
futures = { version = "0.3" }
futures-util = { version = "0.3.32" }
tmq = { version = "0.5.0" }
tokio = { version = "=1.48.0", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.17", features = ["codec", "net", "rt", "io-util"] }

# HTTP and service APIs
axum = { version = "=0.8.4", features = ["macros", "ws"] }
axum-core = { version = "0.5.2" }
hyper = { version = "=1.7.0" }
hyper-util = { version = "=0.1.17" }
reqwest = { version = "0.12.24", default-features = false, features = [
    "multipart",
    "json",
    "stream",
    "rustls-tls",
] }
tower-http = { version = "0.6", features = ["trace"] }

# Serialization and data formats
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
    "clock",
    "now",
    "serde",
] }
rmp-serde = { version = "1" }
serde_bytes = { version = "0.11" }
# "rc" is for async-openai. Allows serializing Rc and Arc. Generally avoid doing that.
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }

# Metrics, tracing, and observability
prometheus = { version = "0.14" }
mio = { version = "=1.1.1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
    "json",
] }
tracing-opentelemetry = { version = "0.32.0" }
opentelemetry = { version = "0.31.0", features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "logs", "grpc-tonic"] }
opentelemetry-appender-tracing = { version = "0.31.0" }

# GPU and model tooling
cudarc = { version = "=0.19.3", features = ["cuda-version-from-build-system", "fallback-latest"] }
fastokens = { version = "0.1.0" }
hf-hub = { version = "0.4.2", default-features = false, features = [
    "tokio",
    "rustls-tls",
    "ureq",
] }
modelexpress-client = { version = "0.3.0" }
modelexpress-common = { version = "0.3.0" }

[profile.dev.package]
insta.opt-level = 3

[profile.dev]
# Enable locally if debug builds become too slow.
# opt-level = 3

[profile.release]
# Shrink release binaries and keep cross-crate optimization enabled.
codegen-units = 1
lto = "thin"

# Profiling profile: release-like but retains debug symbols for perf/flamegraph/Nsight.
# Build: cargo build --profile profiling --features nvtx
[profile.profiling]
inherits = "release"
debug = true
strip = false

# Pin llm-multimodal + llm-tokenizer to the smg commit that switches
# hf-hub from native-tls to rustls-tls (PR #1459, merged 2026-05-05).
# Remove this block once llm-multimodal ≥1.6.0 is published on crates.io.
[patch.crates-io]
llm-multimodal = { git = "https://github.com/lightseekorg/smg", rev = "e3eccacf96bc6e041a7ec6623e2251dba1129f28" }
llm-tokenizer = { git = "https://github.com/lightseekorg/smg", rev = "e3eccacf96bc6e041a7ec6623e2251dba1129f28" }
