# SPDX-FileCopyrightText: Copyright (c) 2026-2028 PAGODA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pagoda-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
description = "Pagoda configuration utilities"

[dependencies]
anyhow = { workspace = true }
