# SPDX-FileCopyrightText: Copyright (c) 2026-2028 PAGODA.
# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES.
# SPDX-License-Identifier: Apache-2.0
#
# API-compatible implementation based on the public interfaces and behavioral
# contracts of NVIDIA Dynamo (https://github.com/ai-dynamo/dynamo).
# Implementation rewritten by PAGODA.

[package]
name = "pagoda-mocker"
description = "Mock LLM scheduler and KV manager for testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"

[features]
default = []

[dependencies]
# repo
pagoda-kv-router = { workspace = true }
pagoda-tokens = { workspace = true }

# workspace
anyhow = { workspace = true }
dashmap = { workspace = true }
derive_builder = { workspace = true }
derive-getters = { workspace = true }
indicatif = "0.18"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

# crate-specific
ndarray = "0.16"
slotmap = "1"
ndarray-npy = "0.9"
ndarray-interp = "0.5"
rustc-hash = "2"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-timerfd = "0.2"

[dev-dependencies]
rstest = "0.18.2"
tempfile = { workspace = true }
