# SPDX-FileCopyrightText: Copyright (c) 2026-2028 PAGODA. All rights reserved.
# SPDX-FileCopyrightText: Copyright (c) 2022 Himanshu Neema
# SPDX-License-Identifier: Apache-2.0 AND MIT
#
# Based on async-openai (https://github.com/64bit/async-openai) by Himanshu Neema.
# Original async-openai Copyright (c) 2022 Himanshu Neema.
# async-openai portions licensed under the MIT License; see ATTRIBUTIONS-Rust.md.
#
# Pagoda modifications Copyright (c) 2026-2028 PAGODA.
# Pagoda modifications licensed under the Apache License, Version 2.0.

[package]
name = "pagoda-protocols"
description = "Protocol types for OpenAI-compatible inference APIs with inference-serving extensions."
license = "Apache-2.0 AND MIT"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Upstream OpenAI types (types-only, no HTTP client)
async-openai = { version = "0.34", default-features = false, features = [
    "chat-completion-types",
    "response-types",
    "completion-types",
    "embedding-types",
    "image-types",
] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }

# Type support
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }



[dev-dependencies]
tokio = { workspace = true }
tokio-test = "0.4.4"
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
