# SPDX-FileCopyrightText: Copyright (c) 2026-2028 PAGODA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name        = "pagoda-runtime"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "Pagoda distributed inference framework - core runtime infrastructure"
repository  = "https://github.com/pagoda-corp/pagoda"
readme      = "README.md"

[features]
default            = []
integration        = []
testing-etcd       = []
tokio-console      = ["dep:console-subscriber"]
compute-validation = []
tcp-low-latency    = []
timeline           = ["dep:cudarc"]

[dependencies]
# ── 异步运行时 ──
tokio            = { workspace = true }
tokio-util       = { workspace = true }
tokio-stream     = { workspace = true }
futures          = { workspace = true }
async-trait      = { workspace = true }
async-stream     = { workspace = true }
pin-project-lite = { workspace = true }

# ── 序列化 ──
serde      = { workspace = true }
serde_json = { workspace = true }
rmp-serde  = { workspace = true }

# ── 配置 ──
figment   = { workspace = true }
validator = { workspace = true }

# ── 网络 ──
async-nats = { workspace = true }
hyper      = { workspace = true }
axum       = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }

# ── Kubernetes 发现 ──
kube        = { workspace = true }
k8s-openapi = { workspace = true }

# ── etcd ──
etcd-client = { workspace = true }

# ── CPU 计算隔离 ──
rayon       = { workspace = true }
tokio-rayon = { workspace = true }

# ── 可观测性 ──
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry      = { workspace = true }
opentelemetry-otlp = { workspace = true }
prometheus         = { workspace = true }
console-subscriber = { workspace = true, optional = true }

# ── 错误处理 ──
anyhow    = { workspace = true }
thiserror = { workspace = true }

# ── 并发工具 ──
arc-swap        = { workspace = true }
dashmap         = { workspace = true }
parking_lot     = { workspace = true }
crossbeam-utils = { workspace = true }

# ── 代码生成 ──
derive_builder = { workspace = true }
educe          = { workspace = true }
derive-getters = { workspace = true }

# ── ZMQ ──
zeromq = { workspace = true }

# ── 哈希 ──
xxhash-rust = { workspace = true }

# ── 其他工具 ──
bytes     = { workspace = true }
uuid      = { workspace = true }
regex     = { workspace = true }
rand      = { workspace = true }
once_cell = { workspace = true }
slug      = { workspace = true }

# ── Timeline（可选） ──
cudarc = { workspace = true, optional = true }

[dev-dependencies]
tokio-test        = { workspace = true }
tempfile          = { workspace = true }
pretty_assertions = { workspace = true }
criterion         = { workspace = true }

# [[bench]]
# name    = "pipeline_bench"
# harness = false

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all       = "warn"
pedantic  = "warn"
