# SPDX-FileCopyrightText: Copyright (c) 2026-2028 PAGODA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pagoda-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pagoda Runtime Library"

[package.metadata.cargo-machete]
ignored = ["mio"]

[features]
default = []
integration = []
testing-etcd = [] # Tests that require an active ETCD server
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
compute-validation = [] # Enable validation and timing for compute macros
tcp-low-latency = [] # Enable Linux-specific TCP optimizations (TCP_QUICKACK, SO_BUSY_POLL)
# Timeline annotations for Nsight Systems (compile-time off; also gated at runtime by PGD_ENABLE_RUST_TIMELINE).
# Overhead: feature off = zero; feature on, env off = ~1ns AtomicBool load; feature on, env on = ~50ns/annotation.
timeline = ["dep:cudarc"]

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
async-nats = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
derive_builder = { workspace = true }
derive-getters = { workspace = true }
either = { workspace = true }
etcd-client = { workspace = true }
futures = { workspace = true }
hyper-util = { workspace = true, features = ["tokio", "server", "server-auto"] }
humantime = { workspace = true }
libc = { workspace = true }
lru = { workspace = true }
mio = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
parking_lot = { workspace = true }
pagoda-config = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tmq = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
xxhash-rust = { workspace = true }

# Optional workspace dependencies
cudarc = { workspace = true, optional = true }

# Runtime internals
arc-swap = { version = "1" }
async-once-cell = { version = "0.5.4" }
bincode = { version = "1" }
console-subscriber = { version = "0.4", optional = true }
crossbeam-queue = { version = "0.3" }
educe = { version = "0.6.0" }
figment = { version = "0.10.19", features = ["env", "json", "toml", "test"] }
local-ip-address = { version = "0.6.3" }
log = { version = "0.4" }
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
nuid = { version = "0.5" }
once_cell = { version = "1" }
percent-encoding = { version = "2.3.2" } # also used by tonic, reqwest, axum, etc
rayon = { version = "1.10" }
regex = { version = "1" }
socket2 = { version = "0.5.8" }
tokio-rayon = { version = "2.1" }

# Kubernetes discovery backend
k8s-openapi = { version = "0.26.0", features = ["v1_32"] }
kube = { version = "2.0.1", default-features = false, features = ["runtime", "derive", "client", "rustls-tls", "aws-lc-rs"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
jsonschema = { version = "0.17" }
rstest = { version = "0.23.0" }
stdio-override = { version = "0.2.0" }
temp-env = { version = "0.3.6", features = ["async_closure"] }
tempfile = { workspace = true }
