# SPDX-FileCopyrightText: Copyright (c) 2026-2028 PAGODA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pagoda-tokenizers"
version.workspace = true
edition.workspace = true
description = "Standalone tokenizer implementations for Pagoda"
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
fastokens = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }

base64 = { version = "0.22" }
rayon = "1"
rustc-hash = "1.1"
tiktoken-rs = { version = "0.9", default-features = false }
tokenizers = { version = "0.21.4", default-features = false, features = [
  "onig",
  "esaxx_fast",
  "rustls-tls",
] }

[dev-dependencies]
tempfile = { workspace = true }
